--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mysql2": "*",
     "neo4j-driver": "^5.10.0",
     "npm": "*",
+    "openai": "^4.95.1",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-facebook-token": "^4.0.0",
