--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "passport-local": "^1.0.0",
     "platform": "^1.3.6",
     "qs": "^6.12.1",
+    "random": "^5.4.0",
     "redis": "3.1.2",
     "request-ip": "^3.3.0",
     "short-unique-id": "^4.4.4",
