--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mailgun-js": "^0.22.0",
     "method-override": "*",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "*",
     "mysql2": "*",
