feat: update dependencies and enhance session management with Redis
- Added connect-redis as a session store to improve session management in production.
- Updated ESLint and related packages to their latest versions for better code quality and consistency.
- Changed application title and description to reflect the new project branding.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "4.1.2",
     "clickhouse": "^2.6.0",
     "compression": "*",
+    "connect-redis": "^6.1.1",
     "compromise": "^14.14.4",
     "cookie-parser": "*",
     "cors": "*",
@@ -76,11 +77,11 @@
     "chai": "*",
     "chai-http": "*",
     "cross-env": "*",
-    "eslint": "*",
-    "eslint-config-airbnb-base": "*",
-    "eslint-plugin-import": "*",
-    "eslint-plugin-vue": "*",
-    "mocha": "^10.2.0",
+
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-vue": "^9.24.0",    "mocha": "^10.2.0",
     "nodemon": "^2.0.12",
     "nyc": "*",
     "sinon": "*",
