--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@sendgrid/mail": "*",
     "axios": "^1.6.7",
     "bcrypt": "^5.0.1",
+    "blurhash": "^2.0.5",
     "body-parser": "*",
     "chalk": "4.1.2",
     "clickhouse": "^2.6.0",
     "compression": "*",
-    "connect-redis": "^6.1.1",
     "compromise": "^14.14.4",
+    "connect-redis": "^6.1.1",
     "cookie-parser": "*",
     "cors": "*",
     "crypto": "^1.0.1",
@@ -66,6 +67,7 @@
     "random": "^5.4.0",
     "redis": "3.1.2",
     "request-ip": "^3.3.0",
+    "sharp": "^0.34.5",
     "short-unique-id": "^4.4.4",
     "socket.io": "^4.7.2",
     "tr46": "^4.1.1",
@@ -77,11 +79,11 @@
     "chai": "*",
     "chai-http": "*",
     "cross-env": "*",
-
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-vue": "^9.24.0",    "mocha": "^10.2.0",
+    "eslint-plugin-vue": "^9.24.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.12",
     "nyc": "*",
     "sinon": "*",
